// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comportamiento por defecto 1`] = `
<div
  className="MuiGrid-root MuiGrid-container"
  style={
    Object {
      "height": "768px",
      "overflowY": "hidden",
    }
  }
>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3"
    style={
      Object {
        "height": "100%",
        "overflowY": "auto",
      }
    }
  >
    <div
      className="MuiPaper-root MuiCard-root MuiPaper-elevation1 MuiPaper-rounded"
      style={
        Object {
          "height": "96%",
          "margin": "2%",
        }
      }
    >
      <div
        className="MuiCardContent-root"
      >
        
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-9"
    style={
      Object {
        "height": "100%",
        "overflowY": "auto",
      }
    }
  >
    <div
      className="MuiContainer-root MuiContainer-maxWidthLg"
    />
  </div>
</div>
`;

exports[`Con data 1`] = `
<div
  className="MuiGrid-root MuiGrid-container"
  style={
    Object {
      "height": "768px",
      "overflowY": "hidden",
    }
  }
>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3"
    style={
      Object {
        "height": "100%",
        "overflowY": "auto",
      }
    }
  >
    <div
      className="MuiPaper-root MuiCard-root MuiPaper-elevation1 MuiPaper-rounded"
      style={
        Object {
          "height": "96%",
          "margin": "2%",
        }
      }
    >
      <div
        className="MuiCardContent-root"
      >
        
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-9"
    style={
      Object {
        "height": "100%",
        "overflowY": "auto",
      }
    }
  >
    <div
      className="MuiContainer-root MuiContainer-maxWidthLg"
    >
      <div>
        Le data
      </div>
    </div>
  </div>
</div>
`;

exports[`Con data 2`] = `
<div
  className="MuiGrid-root MuiGrid-container"
  style={
    Object {
      "height": "768px",
      "overflowY": "hidden",
    }
  }
>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3"
    style={
      Object {
        "height": "100%",
        "overflowY": "auto",
      }
    }
  >
    <div
      className="MuiPaper-root MuiCard-root MuiPaper-elevation1 MuiPaper-rounded"
      style={
        Object {
          "height": "96%",
          "margin": "2%",
        }
      }
    >
      <div
        className="MuiCardContent-root"
      >
        <p
          className="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary MuiTypography-gutterBottom"
        >
          <div>
            Le hint
          </div>
        </p>
        <hr />
        <br />
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-9"
    style={
      Object {
        "height": "100%",
        "overflowY": "auto",
      }
    }
  >
    <div
      className="MuiContainer-root MuiContainer-maxWidthLg"
    />
  </div>
</div>
`;

exports[`Con filtros 1`] = `
<div
  className="MuiGrid-root MuiGrid-container"
  style={
    Object {
      "height": "768px",
      "overflowY": "hidden",
    }
  }
>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3"
    style={
      Object {
        "height": "100%",
        "overflowY": "auto",
      }
    }
  >
    <div
      className="MuiPaper-root MuiCard-root MuiPaper-elevation1 MuiPaper-rounded"
      style={
        Object {
          "height": "96%",
          "margin": "2%",
        }
      }
    >
      <div
        className="MuiCardContent-root"
      >
        
        <div>
          Le filter
        </div>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-9"
    style={
      Object {
        "height": "100%",
        "overflowY": "auto",
      }
    }
  >
    <div
      className="MuiContainer-root MuiContainer-maxWidthLg"
    />
  </div>
</div>
`;
